--- a/web_page/index.html
+++ b/web_page/index.html
@@ -2,10 +2,11 @@
 <html>
     <head>
         <title>create a schedule</title>
+        <link rel="stylesheet" href="../style/first.css">
     </head>
     <body>
             {% for i in range(1,table.num+1) %}
-                <div>
+                <div class="day_tab">
                     <button><a href=#{{table.table[0][i][0]}}>{{table.table[0][i][0]}}</a></button>
                 </div>   
             {% endfor %}
