--- a/web_page/final_page.html
+++ b/web_page/final_page.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../style/final.css">
     </head>
     <body>
-        <h1>you have create your schedule successfully</h1>
+        <h1 style="text-align: center;">you have create your schedule successfully</h1>
         <form method="POST" action="/download">
             <input type="submit" value="Download"/>
         </form>
