[/CSS] Improved css design for a better experience

--- a/web_page/final_page.html
+++ b/web_page/final_page.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../style/final.css">
-    </head>
-    <body>
-        <h1 style="text-align: center;">you have create your schedule successfully</h1>
-        <form method="POST" action="/download">
-            <input type="submit" value="Download"/>
-        </form>
-        <div>
-            <a href="/">create other schedule</a>
-        </div>
-    </body>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../style/global.css" />
+    <link rel="stylesheet" href="../style/final.css" />
+  </head>
+  <body>
+    <h1 style="text-align: center">
+      You have successfully generated a schedule!
+    </h1>
+    <form method="POST" action="/download">
+      <input type="submit" value="Download" />
+    </form>
+    <div>
+      <a href="/">create other schedule</a>
+    </div>
+  </body>
 </html>
